--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
           <a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
         </li>
         <li>
-          <a href="#"><i class="fa-brands fa-twitter"></i> Twitter</a>
+          <a href="#"><i class="fa-brands fa-linkedin"></i>Linkedin</a>
         </li>
         <li>
-          <a href="#"><i class="fa-brands fa-youtube"></i> Youtube</a>
+          <a href="#"><i class="fa-brands fa-github"></i>Git Hub</a>
         </li>
         <li>
-          <a href="#"><i class="fa-brands fa-github"></i> Git Hub</a>
+          <a href="#"><i class="fa-brands fa-youtube"></i>Youtube</a>
         </li>
       </ul>
 
