--- a/index.html
+++ b/index.html
@@ -46,10 +46,18 @@
           <a href="#"><i class="fa-brands fa-linkedin"></i>Linkedin</a>
         </li>
         <li>
-          <a href="#"><i class="fa-brands fa-github"></i>Git Hub</a>
+          <a 
+            href="https://github.com/juliuscaezarff">
+            <i class="fa-brands fa-github"></i>
+            Git Hub
+          </a>
         </li>
         <li>
-          <a href="#"><i class="fa-brands fa-youtube"></i>Youtube</a>
+          <a 
+            href="https://www.youtube.com/watch?v=G4MSzknx7zk">
+            <i class="fa-brands fa-youtube"></i>
+            Youtube
+          </a>
         </li>
       </ul>
 
