import fontawesome and body page

--- a/404.html
+++ b/404.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Opa ainda não</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/ddb3e06dff.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Opa ainda não</title>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <i class="fa-thin fa-arrow-left"></i>
+      </nav>
+    </header>
+
+    <div>
+      <h2>Em breve kkkk juro</h2>
+      <img src="./assets/sapo-caco.gif" alt="" />
+    </div>
+  </body>
 </html>
