--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a href="#"><i class="fa-brands fa-instagram"></i> Instagram</a>
         </li>
         <li>
-          <a href="#"><i class="fa-brands fa-linkedin"></i>Linkedin</a>
+          <a href="./404.html"><i class="fa-brands fa-linkedin"></i>Linkedin</a>
         </li>
         <li>
           <a 
