--- a/404.html
+++ b/404.html
@@ -4,20 +4,18 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/ddb3e06dff.js"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://kit.fontawesome.com/ddb3e06dff.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="404.css">
     <title>Opa ainda não</title>
   </head>
   <body>
     <header>
       <nav>
-        <i class="fa-thin fa-arrow-left"></i>
+        <a href="./index.html"><img src="./assets/arrow.png" alt=""></a>
       </nav>
     </header>
 
-    <div>
+    <div class="container">
       <h2>Em breve kkkk juro</h2>
       <img src="./assets/sapo-caco.gif" alt="" />
     </div>
