add targt _blank

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
         </li>
         <li>
           <a 
+          target="_blank"
             href="https://github.com/juliuscaezarff">
             <i class="fa-brands fa-github"></i>
             Git Hub
@@ -54,6 +55,7 @@
         </li>
         <li>
           <a 
+          target="_blank"
             href="https://www.youtube.com/watch?v=G4MSzknx7zk">
             <i class="fa-brands fa-youtube"></i>
             Youtube
